refactor:put comments, robust CORS and put manager password into .env